--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 body {
     background-color: green;
-    width: 100%;
-    height: auto;
+    width: 100vw;
+    height: 100vh;
 }
 
 .nav-class {
